divide and rename LandParcelGroup into CultivableLandParcel.

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -128,6 +128,11 @@ arb:
     backend/contacts:  #?
       edit: "تعديل عنوان : %{entity}" #?
       new: "اضافة متصل جديد" #?
+    backend/cultivable_land_parcels:
+      # edit: "Modifier la parcelle culturale\_: %{name}"
+      # index: "Parcelles culturales"
+      # new: "Ajouter une parcelle culturale"
+      # show: "Parcelle culturale\_: %{name}"
     backend/cultivations: #?
     backend/currencies: #?
     backend/custom_field_choices:
@@ -152,6 +157,7 @@ arb:
       # stocks: "Tableau de bord des stocks"
       # tools: "Tableau de bord des outils"
       # welcome: "Bienvenue dans Ekylibre"
+    backend/data_view/manure_management_plans: #?
     backend/delays:  #?
       edit: "تعديل المهلة : %{name}" #?
       index: "مهلة" #?
@@ -317,12 +323,12 @@ arb:
       # new: "Ajouter un nouvel ilôt"
       # show: "Ilôt %{name}"
     backend/land_parcel_groups:
-      # divide: "Diviser la parcelle culturale\_: %{name}"
-      # edit: "Modifier la parcelle culturale\_: %{name}"
-      # index: "Parcelles culturales"
-      # merge: "Fusionner des parcelles culturales"
-      # new: "Ajouter une nouvelle parcelle culturale"
-      # show: "Parcelle culturale %{name}"
+      # divide: "Diviser le groupe de parcelle\_: %{name}"
+      # edit: "Modifier le groupe de parcelle\_: %{name}"
+      # index: "Groupes de parcelles"
+      # merge: "Fusionner des groupes de parcelles"
+      # new: "Ajouter un nouveau groupe de parcelles"
+      # show: "Groupe de parcelles %{name}"
     backend/land_parcels:
       # divide: "Diviser la parcelle\_: %{name}"
       edit: "تعديل النظام : %{name}"
