--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -811,7 +811,7 @@ fra:
     reductions: "Lignes de réductions"
     reference_number: "N°Référence"
     reflation_submissive: "Soumis à la relance"
-    # reflections: "Reflections"
+    reflections: "Réflections"
     relative_humidity: "Humidité relative"
     remaining_duration: "Durée d’utilisation prévue (heures)"
     required: "Obligatoire"
