--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -720,8 +720,7 @@ eng:
     account_tabbox:
       children: "Children Account"
       entities: "People"
-      # journal_entry_items: "Écritures"
-      journal_entry_items: "Journal entry items" #?
+      journal_entry_items: "Journal entry items"
     # account_tangible_fixed_assets: "Immobilisations corporelles"
     # account_untangible_fixed_assets: "Immobilisations incorporelles"
     # account_value_current: "Brut"
@@ -1236,8 +1235,7 @@ eng:
     number_options: "Options Numbers"
     on_account: "On account"
     one_condition: "One condition"
-    # operation_items: "Intrants et sortants"
-    operation_items: "Incoming and outgoing products" #?
+    operation_items: "Incoming and outgoing products"
     operations: "Operations"
     order: "Order"
     order_amount_with_taxes: "Order amount with taxes"
@@ -1687,8 +1685,7 @@ eng:
     bookkeeping_works_only_with: "The transfer to accountancy can be done only for: %{list}."
     cannot_delete_entity: "This person can't be deleted because there is some accounting history."
     cannot_find_document_template: "Cant find document template"
-    # cannot_mark_entry_items: "Impossible de lettrer ces lignes d’écritures ensemble"
-    cannot_mark_entry_items: "Can not mark these entry lines" #?
+    cannot_mark_entry_items: "Can not mark these entry lines"
     cannot_merge_an_entity_with_itself: "It's impossible to merge a person with itself"
     cannot_merge_entities: "It's impossible to merge these people."
     changes_have_been_reflected: "The changes have been reflected in the stocks state"
@@ -1697,13 +1694,9 @@ eng:
     columns_are_already_uses: "One or many columns are selected many times"
     dashboard_is_being_developed: "Dashboard is under heavy development"
     draft_entry_items_are_validated:
-      # one: "%{count} ligne de brouillard validée"
-      # other: "%{count} lignes de brouillard validées"
-      # zero: "Aucune ligne de brouillard validée"
-    draft_entry_items_are_validated:  #?
-      one: "One entry has been validated" #?
-      other: "%{count} entries have been validated" #?
-      zero: "No entries has been validated" #?
+      one: "One entry has been validated"
+      other: "%{count} entries have been validated"
+      zero: "No entries has been validated"
     entity_columns_are_needed: "You need to specify at least one column for the person and in particular its family name."
     exception_raised: "An error occurred during the processing: %{message}"
     expired_session: "Session expired. Please reconnect."
@@ -1711,23 +1704,18 @@ eng:
     # import_succeeded: "Vos données ont été correctement importées"
     importation_cancelled: "Your data was not imported. Import has been canceled"
     importation_finished: "The import is complete."
-    # impossible_to_add_items: "Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande"
-    # impossible_to_add_items_to_purchase: "Vous ne pouvez plus ajouter de produits à votre achat"
-    impossible_to_add_items: "You can add more products to your sale, the estimate is passed in order" #?
-    impossible_to_add_items_to_purchase: "You can not add products to your purchase " #?
+    impossible_to_add_items: "You can add more products to your sale, the estimate is passed in order"
+    impossible_to_add_items_to_purchase: "You can not add products to your purchase "
     invalid_file_nature: "Invalid file type"
     journal_closed_on: "The journal “%{journal}” was closed on %{closed_on}."
     journal_entry_already_validated: "The record has already been validated and can not be changed"
     journal_entry_has_been_saved: "The record %{number} has been successfully saved"
-    # journal_entry_items_marked_with_letter: "Les lignes d’écritures ont été lettrées avec la lettre %{letter}"
-    journal_entry_items_marked_with_letter: "Journal entry items have been marked with letter %{letter}" #?
+    journal_entry_items_marked_with_letter: "Journal entry items have been marked with letter %{letter}"
     journal_reopened_on: "The journal “%{journal}” has been re-opened on %{closed_on}."
     mails_are_sent: "The emails were sent"
     need_balanced_journal_to_tax_declaration: "All your journals must be closed and balanced at that date."
-    # need_building_to_create_purchase_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser un achat"
-    need_building_to_create_purchase_item: "You must create a building to be able to create a purchase." #?
-    # need_building_to_create_sale_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser une vente"
-    need_building_to_create_sale_item: "You must create a building to be able to create a sale" #?
+    need_building_to_create_purchase_item: "You must create a building to be able to create a purchase."
+    need_building_to_create_sale_item: "You must create a building to be able to create a sale"
     need_building_to_record_stock_moves: "You must create a building to be able to manage stocks."
     need_cash_to_record_statements: "You must be at least create a bank account to enter a statement."
     need_closed_financial_year_to_declaration: "You must have a closed financial year to create a VAT return."
@@ -1749,8 +1737,7 @@ eng:
     no_depositable_payments: "There are no payment to deposit"
     no_existing_mandates: "There are no mandates"
     # no_financial_year: "Aucun exercice enregistré"
-    # no_items_found: "Aucun pruduit n’a été ajouté à la commande "
-    no_items_found: "No product has been added to the order" #?
+    no_items_found: "No product has been added to the order"
     no_payment_to_deposit: "There are no payment to deposit"
     no_reopenable_journal: "You can not re-open this journal."
     no_stocks: "You have no stock. If you want to manage the stock of a product, please check the option “Manage stocks” in the characteristics of your product."
@@ -1769,7 +1756,7 @@ eng:
     sale_already_invoiced: "The sale has already been invoiced: you can not define delivery "
     sale_cannot_be_updated: "The estimate is no longer editable."
     sale_cant_be_deleted: "The sale can not be deleted."
-    select_entry_items_to_mark_together: "Select entry items to mark together" #?
+    select_entry_items_to_mark_together: "Select entry items to mark together"
     specify_filter: "You must choose at least one search filter"
     specify_updates: "You must specify at least one field to edit"
     unavailable_model: "Inexistent %{model} (%{id})"
@@ -1778,10 +1765,10 @@ eng:
     unvalid_version_for_restore: "The version of the software used to perform the backup does not match the current version of the software"
     update_is_done: "The update has been made"
     validates_old_inventories: "It is advisable to clear or validate uncommitted inventories before making a new"
-    x_unpointed_journal_entry_items:  #?
-      one: "There is one entry to point" #?
-      other: "There are %{count} entries to point" #?
-      zero: "There are no entries to point at the moment" #?
+    x_unpointed_journal_entry_items:
+      one: "There is one entry to point"
+      other: "There are %{count} entries to point"
+      zero: "There are no entries to point at the moment"
     you_must_have_an_email_column: "You must have an email address in your extraction"
     you_must_select_a_file_to_import: "You must select a file to import"
     you_will_lose_all_your_current_data: "If you continue, you will lose all your data being entered. Would you continue?"
