Cleans products forms and genericize info management

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1360,6 +1360,7 @@ arb:
     # indicator_datatype: "Indicator datatype"
     # indicators: "Indicators"
     indirect_links: "روابط مباشرة"
+    # individual: "Individual"
     # indivisible: "Indivisible"
     # initial_number: "Numéro initial"
     integer_value: "قيمة العدد الصحيح"
