--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -998,6 +998,7 @@ arb:
     # childrens: "Enfants"
     # choice_options: "Indicateur avec liste de choix"
     choices: "خيارات"
+    # choose_a_type_of_product: "Choisissez un type de produit"
     choose_mail_column: "الرجاء اختيار العمود المستخدم للرسالة"
     city_name: "المدينة"
     click_to_mail: "اكتب الرسالة بالبريد الالكتروني الخاص بك"
