--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -853,6 +853,7 @@ eng:
     childrens: "Childrens"
     # choice_options: "Indicateur avec liste de choix"
     choices: "Choices"
+    choose_a_type_of_product: "Choose a type of product"
     choose_mail_column: "Choose email column"
     city_name: "City name"
     click_to_mail: "Click to email with your own mail software"
