--- a/config/locales/fra/help/products-index.txt
+++ b/config/locales/fra/help/products-index.txt
@@ -6,8 +6,7 @@
 
 Un produit est un objet réel (produit) ou virtuel (service) de l'entreprise.
 
-Les produits sont gérés via leur type ([[>backend/animals|animal]] , [[>backend/plants|végétal]], [[>backend/matters|matière]], [[>backend/equipments|équipement]],
- [[>backend/land_parcels|parcelle]], [[>backend/buildings|installation]], travailleurs)
+Les produits sont gérés via leur type ([[>backend/animals|animal]], [[>backend/plants|végétal]], [[>backend/matters|matière]], [[>backend/equipments|équipement]], [[>backend/land_parcels|parcelle]], [[>backend/buildings|installation]], travailleurs).
 
 >>> Ex 1 : Engrais, produits phytosanitaires
 
