--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -904,6 +904,7 @@ spa:
     # childrens: "Enfants"
     # choice_options: "Indicateur avec liste de choix"
     # choices: "Choix"
+    # choose_a_type_of_product: "Choisissez un type de produit"
     choose_mail_column: "Por favor escoge la columna a utilizar para el mailing"
     # city_name: "Ville"
     click_to_mail: "Escribe su mensaje con su propia mensajeria electronica"
