add Prescription and Worker model (MVC / CRUD)

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -708,6 +708,7 @@ arb:
       statistics: "احصائياتي" #?
       # unlock: "Déverrouiller l’utilisateur"
     backend/vegetals: #?
+    backend/workers: #?
     backend/working_sets: #?
     public:
       # index: "Accueil"
