--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -784,6 +784,7 @@ eng:
     district: "District"
     districts: "Districts"
     division: "X" #?
+    # document: "Document"
     document_templates: "Document templates"
     documents: "Documents"
     downpayment: "Downpayment"
