--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -655,6 +655,7 @@ jpn:
     # discount_percentage: "Pourcentage d’escompte"
     # district: "Zone administrative"
     # districts: "Zones administratives"
+    # document: "Document"
     # document_templates: "Modèles de document"
     # documents: "Documents"
     # downpayment: "Acompte"
