--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -634,6 +634,7 @@ spa:
       statistics: "Mis estadisticas" #?
       # unlock: "Déverrouiller l’utilisateur"
     backend/vegetals: #?
+    backend/workers: #?
     backend/working_sets: #?
     public:
       # index: "Accueil"
